# union

./: .gitignore  Cargo.toml  flake.nix
cosmwasm/: cosmwasm.nix
deployments/: deployments.json
lib/embed-commit/src/: lib.rs
lib/ucs03-zkgm-packet/: Cargo.toml
lib/ucs03-zkgm-packet/src/: lib.rs  token_order.rs
tools/rust/: buildWasm.nix  crane.nix
