[package]
name    = "ucs03-zkgm-packet"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license-file = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
alloy-sol-types      = { workspace = true }
embed-commit         = { workspace = true }
enumorph             = { workspace = true }
hex-literal          = { workspace = true }
serde                = { workspace = true, optional = true, features = ["derive"] }
serde-wasm-bindgen   = { version = "0.6.5", optional = true }
serde_bytes          = { version = "0.11.19", optional = true, default-features = false, features = ["alloc"] }
ucs03-zkgm           = { workspace = true, features = ["library"] }
unionlabs-primitives = { workspace = true }
wasm-bindgen         = { version = "=0.2.100", optional = true }

[features]
default      = ["serde"]
serde        = ["dep:serde", "unionlabs-primitives/serde"]
wasm-bindgen = ["serde", "dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:serde_bytes"]

[dev-dependencies]
serde_json = { workspace = true }
